--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "tms"
   ],
   "dependencies": {
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1"
   },
   "devDependencies": {
     "standard": "~10.0.0"
